# slidesgenerator

./: .env.example  .gitignore  CLAUDE.md  Makefile  Procfile.dev  Procfile.dev.windows  README.md  alembic.ini  package-lock.json  pyproject.toml  ruff.toml  test_content.txt  test_streaming.py  test_templates.py
.claude/: settings.local.json
apps/: __init__.py
apps/frontend/: .env.local.example  package-lock.json  package.json
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/app/: page.tsx
apps/frontend/app/faq/: page.tsx
apps/frontend/app/features/: page.tsx
apps/frontend/app/presentation/: page.tsx
apps/frontend/app/pricing/: page.tsx
apps/frontend/app/sales/: page.tsx
apps/frontend/app/templates/: page.tsx
apps/frontend/components/: Providers.tsx
apps/frontend/components/atoms/: Button.tsx  Card.tsx  Input.tsx  Spinner.tsx  (+5 more)
apps/frontend/contexts/: SlidesContext.tsx  TemplateContext.tsx  index.ts
apps/frontend/lib/: templates.ts  themes.ts
apps/public_api/: __init__.py  dependencies.py  main.py
apps/slides_api/: __init__.py  main.py
apps/slides_api/api/: __init__.py
infra/alembic/: env.py
infra/alembic/versions/: 20251203_1148_e500e84d765f_initial_schema.py  20251203_1244_add_chart_fields.py  20251203_1839_6ff634bb758e_add_api_keys_table.py  20251203_1841_5bfcdac263f5_add_api_keys_table.py  20251204_add_image_fields_to_slides.py  20251204_add_new_slide_type_fields.py  20251204_add_templates.py  20251205_1531_4bcc57c893f5_add_template_metadata_fields.py
scripts/: create_admin_key.py  seed_templates.py
(+73 files in other folders)
