[tool.poetry]
name = "decksnap"
version = "0.1.0"
description = "One-click slide generation from text"
authors = ["Decksnap Team"]
readme = "README.md"
packages = [
    { include = "packages" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and server
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
# Database
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
# Data validation
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
# HTTP clients
httpx = "^0.28.0"
# AI - OpenRouter compatible
openai = "^1.59.5"
# PDF generation
weasyprint = "^62.0"
# Utilities
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.4"
mypy = "^1.13.0"
honcho = "^1.1.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
